[package]
name = "patisson-bybit-sdk"
version = "0.1.2"
edition = "2024"
authors = ["Yurii Musolov <yurii.musolov@gmail.com>"]
description = "Unofficial Rust SDK for the Bybit exchange API"
keywords = ["bybit", "sdk", "crypto", "trading", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/patisson-bybit-sdk"
repository = "https://github.com/yurii-musolov/patisson-bybit-sdk"
license = "MIT"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = { version = "1.45.1", features = ["full"] }
rust_decimal = { version = "1.37.1", features = [
  "std",
  "macros",
  "serde-str",
  "serde-with-str",
] }
