[package]
name = "patisson-bybit-sdk"
version = "0.1.5"
edition = "2024"
authors = ["Yurii Musolov <yurii.musolov@gmail.com>"]
description = "Unofficial Rust SDK for the Bybit exchange API"
keywords = ["bybit", "sdk", "crypto", "trading", "cryptocurrency"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/patisson-bybit-sdk"
repository = "https://github.com/yurii-musolov/patisson-bybit-sdk"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std",
] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = { version = "1.45.1", features = ["full"] }
rust_decimal = { version = "1.37.1", features = [
  "std",
  "macros",
  "serde-str",
  "serde-with-str",
] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_urlencoded = "0.7.1"
