[package]
name = "examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[[example]]
name = "instruments-info"
path = "instruments-info.rs"

[[example]]
name = "kline"
path = "kline.rs"

[[example]]
name = "recent-trading-history"
path = "recent-trading-history.rs"

[[example]]
name = "server-time"
path = "server-time.rs"

[[example]]
name = "stream-all-liquidation"
path = "stream-all-liquidation.rs"

[[example]]
name = "stream-public"
path = "stream-public.rs"

[[example]]
name = "ticker"
path = "ticker.rs"
